--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   },
   "homepage": "https://github.com/Nerk1/sos1920-labs#readme",
   "dependencies": {
-    "cool-ascii-faces": "^1.3.4",
-    "express": "^4.17.1"
+    "cool-ascii-faces": "^1.3.4"
   }
 }
